test/tests/errors/error-array-size-less-than-one.sm
// true
// true
// false
/**/
/**/

program {
    array x[-3:-4]: int;
}